// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperEditionModal should match snapshot when has a subscription already 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="evmehgn-el-is-active e8lauwf-el-modal-bg"
        />
        <div
          class="evmehgn-el-is-active e1ucftfo-el-modal"
        >
          <div
            class="e1jrhqcv-el-modal-header"
          >
            Existing Subscription
          </div>
          <div
            class="egkth73-el-modal-body"
          >
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              It looks as though you already have a subscription in place for the Developer Edition of Agency Cloud. To download, please use the ‘Download Now’ button below. For more information or support using the Developer Edition, please 
              <a
                href=""
                rel="noopener noreferrer"
                target="_blank"
              >
                click here
              </a>
            </p>
            <div
              class="ebqwrow-el-button-group"
            >
              <div
                class="e1f2ikqj-el-button-group-align-center eh76izl-el-button-group-inner"
              >
                <button
                  class="e1ymtwpu-el-intent-low eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                >
                  Close
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
                <button
                  class="ebee6r1-el-intent-primary eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                  type="submit"
                >
                  Download
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has billing content and is a user 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="evmehgn-el-is-active e8lauwf-el-modal-bg"
        />
        <div
          class="evmehgn-el-is-active e1ucftfo-el-modal"
        >
          <div
            class="e1jrhqcv-el-modal-header"
          >
            Account Information Required
          </div>
          <div
            class="egkth73-el-modal-body"
          >
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              <p>
                Before you can subscribe to the Developer Edition of Agency Cloud, billing information will need to be submitted. Please ask the Admin of your organisation to visit this page to contact a member of the team.
              </p>
            </p>
            <div
              class="ebqwrow-el-button-group"
            >
              <div
                class="e1f2ikqj-el-button-group-align-center eh76izl-el-button-group-inner"
              >
                <button
                  class="e1ymtwpu-el-intent-low eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                >
                  Cancel
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has billing content and is an admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="evmehgn-el-is-active e8lauwf-el-modal-bg"
        />
        <div
          class="evmehgn-el-is-active e1ucftfo-el-modal"
        >
          <div
            class="e1jrhqcv-el-modal-header"
          >
            Account Information Required
          </div>
          <div
            class="egkth73-el-modal-body"
          >
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              <p>
                Before you can subscribe to the Developer Edition of AgencyCloud, we will first need to verify your account information. Please
                <a
                  href="mailto:jhennessy@reapit.com?subject=Developer%20Edition%20of%20AgencyCloud%20Subscription"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                   
                  click here
                </a>
                 
                to contact a member of the team.
              </p>
            </p>
            <div
              class="ebqwrow-el-button-group"
            >
              <div
                class="e1f2ikqj-el-button-group-align-center eh76izl-el-button-group-inner"
              >
                <button
                  class="e1ymtwpu-el-intent-low eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                >
                  Cancel
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has client data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="evmehgn-el-is-active e8lauwf-el-modal-bg"
        />
        <div
          class="evmehgn-el-is-active e1ucftfo-el-modal"
        >
          <div
            class="e1jrhqcv-el-modal-header"
          >
            Unable to create subscription
          </div>
          <div
            class="egkth73-el-modal-body"
          >
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              Your account is currently set to use 
              <strong>
                MOCK_NAME
              </strong>
              . In order to subscribe to the developer edition you will need to change your profile setting. Please
               
              <a
                href="/settings/profile"
              >
                click here
              </a>
               to update your information.
            </p>
            <div
              class="ebqwrow-el-button-group"
            >
              <div
                class="e1f2ikqj-el-button-group-align-center eh76izl-el-button-group-inner"
              >
                <button
                  class="e1ymtwpu-el-intent-low eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                >
                  Cancel
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has subscribed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="evmehgn-el-is-active e8lauwf-el-modal-bg"
        />
        <div
          class="evmehgn-el-is-active e1ucftfo-el-modal"
        >
          <div
            class="e1jrhqcv-el-modal-header"
          >
            Success
          </div>
          <div
            class="egkth73-el-modal-body"
          >
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              You have successfully subscribed 1 Agency Cloud user licence and an email has been sent to the following members of your organisation with instructions on how to get started.
            </p>
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              Joe Dev
               - 
              <a
                href="mailto:example@email.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                example@email.com
              </a>
            </p>
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              We have added your subscription to your monthly billing. To manage your subscriptions please visit the 'Billing' tab.
            </p>
            <div
              class="ebqwrow-el-button-group"
            >
              <div
                class="e1f2ikqj-el-button-group-align-center eh76izl-el-button-group-inner"
              >
                <button
                  class="e1ymtwpu-el-intent-low eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                >
                  Close
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
                <button
                  class="ebee6r1-el-intent-primary eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                  type="submit"
                >
                  Download
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when not visible 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when visible 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="evmehgn-el-is-active e8lauwf-el-modal-bg"
        />
        <div
          class="evmehgn-el-is-active e1ucftfo-el-modal"
        >
          <div
            class="e1jrhqcv-el-modal-header"
          >
            Agency Cloud Developer Edition
          </div>
          <div
            class="egkth73-el-modal-body"
          >
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              The Agency Cloud Developer Edition is a licensed product. 
              By confirming the subscription below, a subscription of £300 will automatically be added to your monthly billing.
               For more information regarding the Developer Edition licence please refer to your Developer Registration
               
              <a
                href="/api-docs/developer-terms-and-conditions"
                rel="noreferrer"
                target="_blank"
              >
                Terms and Conditions.
              </a>
            </p>
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
            >
              To proceed, please confirm your subscription below for 
              <strong>
                Joe Dev
              </strong>
            </p>
            <div
              class="ebqwrow-el-button-group"
            >
              <div
                class="e1f2ikqj-el-button-group-align-center eh76izl-el-button-group-inner"
              >
                <button
                  class="e1ymtwpu-el-intent-low eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                >
                  Cancel
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
                <button
                  class="ebee6r1-el-intent-primary eqfkc7t-el-button-fixed-width e1tqqdf9-el-button"
                  type="submit"
                >
                  Confirm
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
